@@ -2,7 +2,12 @@
 
 == Table of Contents
 
+* Removed deprecated AuthorisationSpi#getScaInformation
 * Update xs2a version
+
+== Removed deprecated AuthorisationSpi#getScaInformation
+
+From now on, `AuthorisationSpi#getScaInformation` is removed.
 
 == Update xs2a version
 
